--- a/cursoCSS/pagina_3/css/pagina_3.css
+++ b/cursoCSS/pagina_3/css/pagina_3.css
@@ -139,3 +139,43 @@ footer img {
 footer img:hover {
     transform: scale(1.2);
 }
+
+@media (max-width:768px){
+    h1{
+        font-size: 30px;
+    }
+    .contenedor img{
+        float: top;
+    }
+    p{
+        font-size: 10px;
+    }
+}
+@media (max-width:500px){
+    h1{
+        font-size: 20px;
+    }
+    .contenedor{
+        width: 300px;
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 90%;
+    }
+    .contenedor p{
+        font-size: 15px;
+    }
+    .coli{
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Centrar elementos */
+        text-align: center;
+        width: 100%;
+    }
+
+    footer img{
+        max-width: 90px;
+    }
+}
