--- a/cursoHTML/ejercicio_9/css/ejercicio_9.css
+++ b/cursoHTML/ejercicio_9/css/ejercicio_9.css
@@ -32,6 +32,14 @@ nav {
     padding: 10px 0;
     text-align: center;
 }
+nav.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background: rgba(0, 61, 130, 0.9);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
 
 .menu {
     list-style: none;
