--- a/cursoCSS/pagina_6/css/pagina_6.css
+++ b/cursoCSS/pagina_6/css/pagina_6.css
@@ -98,6 +98,38 @@ h2{
     font-size: 0.8em;
     border-radius: 4px;
 }
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 40px 20px;
+}
+.item{
+    background: #003580;
+    padding: 15px;
+    border-radius: 10px;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.item img{
+    width: 100%;
+    border-radius: 10px;
+}
+.item h3{
+    margin-top: 10px;
+}
+.item:hover{
+    transform: scale(1.1);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+.item .precio{
+    color: #ffdb4d;
+}
+.item h3{
+    color: white;
+}
+.item .descripcion{
+    color: white;
+}
 footer{
     background-color: #004aad;
     color: white;
