--- a/cursoCSS/pagina_12/css/pagina_12.css
+++ b/cursoCSS/pagina_12/css/pagina_12.css
@@ -42,13 +42,13 @@ nav ul li a{
     gap: 20px;
     padding: 20px;
 }
-.producto{
+.servicio{
     background: white;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
-.producto img{
+.servicio img{
     width: 100%;
     border-radius: 10px;
 }
